--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,12 @@ body {
   width: 100vw;
 }
 
+.visible {
+  opacity: 1;
+}
+.invisible {
+  opacity: 0;
+}
 a {
   color: inherit;
   text-decoration: none;
